--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "@angular/platform-browser-dynamic": "~9.1.0",
     "@angular/router": "~9.1.0",
     "angular-bootstrap-md": "^9.1.0",
+    "apexcharts": "^3.18.1",
     "bootstrap": "^4.4.1",
+    "ng-apexcharts": "^1.2.3",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
